vendor/linux/x64/ftd2xx.h


typedef PVOID	FT_HANDLE;
typedef ULONG	FT_STATUS;
enum {
	FT_OK,
	FT_INVALID_HANDLE,
	FT_DEVICE_NOT_FOUND,
	FT_DEVICE_NOT_OPENED,
	FT_IO_ERROR,
	FT_INSUFFICIENT_RESOURCES,
	FT_INVALID_PARAMETER,
	FT_INVALID_BAUD_RATE,
	FT_DEVICE_NOT_OPENED_FOR_ERASE,
	FT_DEVICE_NOT_OPENED_FOR_WRITE,
	FT_FAILED_TO_WRITE_DEVICE,
	FT_EEPROM_READ_FAILED,
	FT_EEPROM_WRITE_FAILED,
	FT_EEPROM_ERASE_FAILED,
	FT_EEPROM_NOT_PRESENT,
	FT_EEPROM_NOT_PROGRAMMED,
	FT_INVALID_ARGS,
	FT_NOT_SUPPORTED,
	FT_OTHER_ERROR,
	FT_DEVICE_LIST_NOT_READY,
};
typedef void(*PFT_EVENT_HANDLER)(DWORD, DWORD);
typedef ULONG	FT_DEVICE;
enum {
	FT_DEVICE_BM,
	FT_DEVICE_AM,
	FT_DEVICE_100AX,
	FT_DEVICE_UNKNOWN,
	FT_DEVICE_2232C,
	FT_DEVICE_232R,
	FT_DEVICE_2232H,
	FT_DEVICE_4232H,
	FT_DEVICE_232H,
	FT_DEVICE_X_SERIES,
	FT_DEVICE_4222H_0,
	FT_DEVICE_4222H_1_2,
	FT_DEVICE_4222H_3,
	FT_DEVICE_4222_PROG,
	FT_DEVICE_900,
	FT_DEVICE_930,
	FT_DEVICE_UMFTPD3A,
	FT_DEVICE_2233HP,
	FT_DEVICE_4233HP,
	FT_DEVICE_2232HP,
	FT_DEVICE_4232HP,
	FT_DEVICE_233HP,
	FT_DEVICE_232HP,
	FT_DEVICE_2232HA,
	FT_DEVICE_4232HA,
};
	FTD2XX_API FT_STATUS WINAPI FT_ListDevices(
		PVOID pvArg1,
		PVOID pvArg2,
		DWORD dwFlags
		);
	FTD2XX_API FT_STATUS WINAPI FT_Open(
		int deviceNumber,
		FT_HANDLE *pHandle
		);
	FTD2XX_API FT_STATUS WINAPI FT_OpenEx(
		PVOID pvArg1,
		DWORD dwFlags,
		FT_HANDLE *pHandle
		);
	FTD2XX_API FT_STATUS WINAPI FT_Close(
		FT_HANDLE ftHandle
		);
	FTD2XX_API FT_STATUS WINAPI FT_Read(
		FT_HANDLE ftHandle,
		LPVOID lpBuffer,
		DWORD dwBytesToRead,
		LPDWORD lpdwBytesReturned
		);
	FTD2XX_API FT_STATUS WINAPI FT_Write(
		FT_HANDLE ftHandle,
		LPVOID lpBuffer,
		DWORD dwBytesToWrite,
		LPDWORD lpdwBytesWritten
		);
	FTD2XX_API FT_STATUS WINAPI FT_SetBaudRate(
		FT_HANDLE ftHandle,
		ULONG dwBaudRate
		);
	FTD2XX_API FT_STATUS WINAPI FT_SetDivisor(
		FT_HANDLE ftHandle,
		USHORT usDivisor
		);
	FTD2XX_API FT_STATUS WINAPI FT_SetDataCharacteristics(
		FT_HANDLE ftHandle,
		UCHAR uWordLength,
		UCHAR uStopBits,
		UCHAR uParity
		);
	FTD2XX_API FT_STATUS WINAPI FT_SetTimeouts(
		FT_HANDLE ftHandle,
		ULONG dwReadTimeout,
		ULONG dwWriteTimeout
		);
	FTD2XX_API FT_STATUS WINAPI FT_SetFlowControl(
		FT_HANDLE ftHandle,
		USHORT usFlowControl,
		UCHAR uXonChar,
		UCHAR uXoffChar
		);
	FTD2XX_API FT_STATUS WINAPI FT_SetDtr(
		FT_HANDLE ftHandle
		);
	FTD2XX_API FT_STATUS WINAPI FT_ClrDtr(
		FT_HANDLE ftHandle
		);
	FTD2XX_API FT_STATUS WINAPI FT_SetRts(
		FT_HANDLE ftHandle
		);
	FTD2XX_API FT_STATUS WINAPI FT_ClrRts(
		FT_HANDLE ftHandle
		);
	FTD2XX_API FT_STATUS WINAPI FT_GetModemStatus(
		FT_HANDLE ftHandle,
		ULONG *lpdwModemStatus
		);
	FTD2XX_API FT_STATUS WINAPI FT_GetQueueStatus(
		FT_HANDLE ftHandle,
		DWORD *lpdwAmountInRxQueue
		);
	FTD2XX_API FT_STATUS WINAPI FT_SetEventNotification(
		FT_HANDLE ftHandle,
		DWORD dwEventMask,
		PVOID pvArg
		);
	FTD2XX_API FT_STATUS WINAPI FT_SetChars(
		FT_HANDLE ftHandle,
		UCHAR uEventChar,
		UCHAR uEventCharEnabled,
		UCHAR uErrorChar,
		UCHAR uErrorCharEnabled
		);
	FTD2XX_API FT_STATUS WINAPI FT_Purge(
		FT_HANDLE ftHandle,
		ULONG ulMask
		);
	FTD2XX_API FT_STATUS WINAPI FT_ResetDevice(
		FT_HANDLE ftHandle
		);
	FTD2XX_API FT_STATUS WINAPI FT_IoCtl(
		FT_HANDLE ftHandle,
		DWORD dwIoControlCode,
		LPVOID lpInBuf,
		DWORD nInBufSize,
		LPVOID lpOutBuf,
		DWORD nOutBufSize,
		LPDWORD lpBytesReturned,
		LPOVERLAPPED lpOverlapped
		);